--- a/app/src/main/res/layout/er_fragment_chart_rates.xml
+++ b/app/src/main/res/layout/er_fragment_chart_rates.xml
@@ -121,7 +121,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/toggle_button_group"
-                        android:setLinesData="@{chartViewModel.currencies}"/>
+                        android:setLinesData="@{chartViewModel.rates}"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
