--- a/app/src/main/res/layout/rv_item_ingot.xml
+++ b/app/src/main/res/layout/rv_item_ingot.xml
@@ -5,16 +5,16 @@
 
     <data>
 
-        <import type="android.view.View"/>
+        <import type="android.view.View" />
 
         <variable
                 name="ingot"
-                type="com.bubllbub.exchangerates.objects.Ingot"/>
+                type="com.bubllbub.exchangerates.objects.Ingot" />
     </data>
 
     <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="96dp"
+            android:layout_height="wrap_content"
             android:layout_margin="0dp"
             app:cardBackgroundColor="@color/colorPrimary"
             app:cardElevation="0dp"
@@ -22,69 +22,95 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
             <ImageView
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:src="@{ingot.symbol}"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-            />
+                    app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                     android:id="@+id/currency_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="16dp"
-                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp"
                     android:text="@{ingot.ingotName}"
-                    android:textSize="20sp"
                     android:textColor="#fff"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:textSize="20sp"
                     app:layout_constraintHorizontal_bias="0.2"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.083"
-                    tools:text="American dollar"/>
+                    tools:text="American dollar" />
 
 
-            <TextView android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:layout_marginEnd="16dp"
-                      android:layout_marginStart="16dp"
-                      android:text="@{Double.toString(ingot.ingotCertificateRubles)}"
-                      android:textSize="28sp"
-                      android:textColor="#fff"
-                      app:layout_constraintBottom_toBottomOf="parent"
-                      app:layout_constraintHorizontal_bias="0.60"
-                      app:layout_constraintLeft_toLeftOf="parent"
-                      app:layout_constraintRight_toRightOf="parent"
-                      app:layout_constraintTop_toTopOf="parent"
-                      tools:text="2.044"
-            />
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:text="@{Double.toString(ingot.ingotCertificateRubles)}"
+                    android:textColor="#fff"
+                    android:textSize="28sp"
+                    app:layout_constraintHorizontal_bias="0.60"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="2.044" />
 
-            <TextView android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:layout_marginEnd="16dp"
-                      android:layout_marginStart="16dp"
-                      android:text="@{Double.toString(ingot.ingotEntitiesRubles)}"
-                      android:textSize="28sp"
-                      android:textColor="#fff"
-                      app:layout_constraintBottom_toBottomOf="parent"
-                      app:layout_constraintHorizontal_bias="0.95"
-                      app:layout_constraintLeft_toLeftOf="parent"
-                      app:layout_constraintRight_toRightOf="parent"
-                      app:layout_constraintTop_toTopOf="parent"
-                      tools:text="3.044"
-            />
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:text="@{Double.toString(ingot.ingotEntitiesRubles)}"
+                    android:textColor="#fff"
+                    android:textSize="28sp"
+                    app:layout_constraintHorizontal_bias="0.95"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="3.044" />
 
+            <ImageView
+                    android:id="@+id/expandableArrow"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:src="@drawable/ic_expandable_arrow"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="32dp"
+                    android:descendantFocusability="blocksDescendants"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/currency_name">
+
+                <net.cachapa.expandablelayout.ExpandableLayout
+                        android:id="@+id/expandableLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:el_duration="500"
+                        app:el_expanded="false"
+                        app:el_parallax="0.5">
+
+                    <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/rv_small_ingots"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:indeterminate="true"
+                            tools:listitem="@layout/rv_item_small_ingot" />
+                </net.cachapa.expandablelayout.ExpandableLayout>
+            </RelativeLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
-
     </androidx.cardview.widget.CardView>
 
 </layout>
