--- a/app/src/main/res/drawable/spinner_bg.xml
+++ b/app/src/main/res/drawable/spinner_bg.xml
@@ -4,9 +4,8 @@
     <item android:drawable="@android:color/white" android:state_selected="true" />
     <item>
         <shape android:shape="rectangle">
-            <stroke android:width="1dp" android:color="@color/colorAccent" />
-            <solid android:color="#fffbfa" />
-            <corners android:bottomLeftRadius="5dp" android:bottomRightRadius="5dp" android:topLeftRadius="5dp" android:topRightRadius="5dp" />
+            <stroke android:width="1dp" android:color="#d8d8d8" />
+            <solid android:color="@color/elementsBackground" />
         </shape>
     </item>
 </selector>
