--- a/app/src/main/res/drawable/spinner_dropdown_bg.xml
+++ b/app/src/main/res/drawable/spinner_dropdown_bg.xml
@@ -12,12 +12,9 @@
             <shape>
                 <stroke
                         android:width="1dp"
-                        android:color="@color/colorAccent" />
-                <corners
-                        android:bottomLeftRadius="5dp"
-                        android:bottomRightRadius="5dp" />
-
-                <solid android:color="#fffbfa" />
+                        android:color="#d8d8d8" />
+                <solid
+                    android:color="@color/elementsBackground" />
             </shape>
         </inset>
     </item>
