--- a/app/src/main/res/layout/er_fragment_chart_rates.xml
+++ b/app/src/main/res/layout/er_fragment_chart_rates.xml
@@ -4,11 +4,12 @@
         xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-        <import type="android.view.View"/>
+
+        <import type="android.view.View" />
+
         <variable
                 name="chartViewModel"
-                type="com.bubllbub.exchangerates.viewmodels.ChartsViewModel"
-                />
+                type="com.bubllbub.exchangerates.viewmodels.ChartsViewModel" />
     </data>
 
     <FrameLayout
@@ -22,16 +23,18 @@
                 style="@style/Widget.ExRates.Backdrop"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@drawable/er_backdrop_bg"
                 android:gravity="center_horizontal"
                 android:orientation="vertical"
                 android:paddingTop="88dp">
 
-            <include layout="@layout/er_backdrop"/>
+            <include layout="@layout/er_backdrop" />
         </LinearLayout>
 
         <com.google.android.material.appbar.AppBarLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
                 app:elevation="0dp">
 
             <androidx.appcompat.widget.Toolbar
@@ -39,13 +42,8 @@
                     style="@style/Widget.ExRates.Toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
-                    android:paddingStart="12dp"
-                    android:paddingLeft="12dp"
-                    android:paddingEnd="12dp"
-                    android:paddingRight="12dp"
-                    app:contentInsetStart="0dp"
-                    app:navigationIcon="@drawable/er_branded_menu"
-                    app:title="@string/er_app_name"/>
+                    app:navigationIcon="@drawable/er_backdrop_menu"
+                    app:title="@string/er_app_name" />
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.core.widget.NestedScrollView
@@ -55,32 +53,40 @@
                 android:layout_marginTop="56dp"
                 android:background="@color/scrollViewBackgroundColor"
                 android:elevation="8dp"
+                android:fillViewport="true"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
 
             <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center|center"
-                    android:orientation="vertical"
-            >
+                    android:padding="16dp"
+                    android:layout_margin="28dp"
+                    android:background="@color/elementsBackground"
+                    android:orientation="vertical">
+
                 <com.jaredrummler.materialspinner.MaterialSpinner
                         android:id="@+id/chartSpinner"
-                        android:layout_width="300dp"
-                        android:layout_height="48dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="60dp"
+                        android:drawableStart="@mipmap/currency_symbol_usd"
+                        android:drawablePadding="8dp"
+                        android:textSize="15sp"
+                        android:layout_marginTop="26dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        android:drawableStart="@mipmap/currency_symbol_usd"
-                        android:drawablePadding="8dp"
-                        app:ms_padding_left="8dp"
-                        app:ms_padding_right="8dp"
-                        app:ms_arrow_tint="@color/colorAccent"
-                        app:ms_text_color="@color/colorAccent"
-                        android:textSize="14sp"/>
+                        app:ms_arrow_tint="@color/gradientToolbarStartColor"
+                        app:ms_padding_left="24dp"
+                        app:ms_padding_right="24dp"
+                        app:ms_text_color="@color/textDarkGrey" />
+
                 <com.google.android.material.button.MaterialButtonToggleGroup
                         android:id="@+id/toggle_button_group"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="26dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/chartSpinner"
@@ -88,40 +94,40 @@
 
                     <com.google.android.material.button.MaterialButton
                             android:id="@+id/button3Months"
-                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                            style="@style/Widget.ExRates.ToggleButton"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            app:strokeColor="@color/colorAccent"
-                            android:textColor="@color/colorAccent"
-                            android:text="3 months" />
+                            android:text="@string/chart_label_months_3"
+                            android:textAllCaps="false"/>
 
                     <com.google.android.material.button.MaterialButton
                             android:id="@+id/button6Months"
-                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                            style="@style/Widget.ExRates.ToggleButton"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            app:strokeColor="@color/colorAccent"
-                            android:textColor="@color/colorAccent"
-                            android:text="6 months" />
+                            android:text="@string/chart_label_months_6"
+                            android:textAllCaps="false"/>
 
                     <com.google.android.material.button.MaterialButton
                             android:id="@+id/button12Months"
-                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                            style="@style/Widget.ExRates.ToggleButton"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            app:strokeColor="@color/colorAccent"
-                            android:textColor="@color/colorAccent"
-                            android:text="12 months" />
+                            android:text="@string/chart_label_months_12"
+                            android:textAllCaps="false"/>
                 </com.google.android.material.button.MaterialButtonToggleGroup>
 
-                <com.github.mikephil.charting.charts.LineChart
+                <com.bubllbub.exchangerates.charts.LineChatGradient
                         android:id="@+id/chartLines"
                         android:layout_width="match_parent"
-                        android:layout_height="400dp"
+                        android:layout_height="0dp"
+                        android:setLinesData="@{chartViewModel.rates}"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="26dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/toggle_button_group"
-                        android:setLinesData="@{chartViewModel.rates}"/>
+                        app:layout_constraintTop_toBottomOf="@+id/toggle_button_group" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
