--- a/app/src/main/res/layout/rv_item_currency.xml
+++ b/app/src/main/res/layout/rv_item_currency.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="96dp"
             android:layout_margin="0dp"
-            app:cardBackgroundColor="@color/colorPrimary"
+            app:cardBackgroundColor="@android:color/transparent"
             app:cardElevation="0dp"
             app:cardMaxElevation="0dp">
 
@@ -25,62 +25,50 @@
                 android:layout_height="match_parent">
 
             <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:id="@+id/imageView2"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:src="@{currency.symbol}"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-            />
+                     />
 
             <TextView
                     android:id="@+id/currency_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="16dp"
                     android:layout_marginStart="16dp"
+                    android:fontFamily="@font/open_sans_bold"
                     android:text="@{currency.curName}"
-                    android:textSize="20sp"
-                    android:textColor="#fff"
+                    android:textColor="@color/textDarkGrey"
+                    android:textSize="14sp"
+                    app:layout_constraintStart_toEndOf="@+id/imageView2"
+                    app:layout_constraintTop_toTopOf="@+id/imageView2"
+                    tools:text="Доллар США" />
+
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/open_sans_semibold"
+                    android:textLocale="@{currency}"
+                    android:textColor="@color/textLightGrey"
+                    android:textSize="14sp"
+                    app:layout_constraintStart_toStartOf="@+id/currency_name"
+                    app:layout_constraintTop_toBottomOf="@+id/currency_name"
+                    tools:text="1 доллар" />
+
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/open_sans_bold"
+                    android:text="@{Double.toString(currency.curOfficialRate)}"
+                    android:textColor="@color/textDarkGrey"
+                    android:textSize="18sp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintHorizontal_bias="0.2"
-                    app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.083"
-                    tools:text="American dollar"/>
-            <TextView android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:layout_marginEnd="16dp"
-                      android:layout_marginStart="16dp"
-                      android:text="@{currency.curAbbreviation}"
-                      android:textSize="14sp"
-                      android:textColor="#fff"
-                      app:layout_constraintBottom_toBottomOf="parent"
-                      app:layout_constraintHorizontal_bias="0.2"
-                      app:layout_constraintLeft_toLeftOf="parent"
-                      app:layout_constraintRight_toRightOf="parent"
-                      app:layout_constraintTop_toTopOf="parent"
-                      app:layout_constraintVertical_bias="0.363"
-                      tools:text="USD"
-            />
-
-            <TextView android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:layout_marginEnd="16dp"
-                      android:layout_marginStart="16dp"
-                      android:text="@{Double.toString(currency.curOfficialRate)}"
-                      android:textSize="32sp"
-                      android:textColor="#fff"
-                      app:layout_constraintBottom_toBottomOf="parent"
-                      app:layout_constraintHorizontal_bias="0.95"
-                      app:layout_constraintLeft_toLeftOf="parent"
-                      app:layout_constraintRight_toRightOf="parent"
-                      app:layout_constraintTop_toTopOf="parent"
-                      tools:text="2.044"
-            />
+                    tools:text="2.044" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
