--- a/app/src/main/res/layout/dialog_add_currency.xml
+++ b/app/src/main/res/layout/dialog_add_currency.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools">
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -19,7 +20,7 @@
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/colorPrimary"
+                android:background="@drawable/er_backdrop_bg"
                 android:padding="16dp">
             <TextView
                     android:layout_width="match_parent"
@@ -27,7 +28,7 @@
                     android:textColor="@color/bpWhite"
                     android:gravity="center"
                     android:textSize="16sp"
-                    android:textStyle="bold"
+                    android:fontFamily="@font/open_sans_semibold"
                     android:text="Select a currency to add to the list"/>
         </LinearLayout>
 
@@ -54,7 +55,12 @@
                     android:id="@+id/dialog_add_cancel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Cancel" />
+                    app:cornerRadius="20dp"
+                    android:padding="12dp"
+                    android:paddingStart="30dp"
+                    android:paddingEnd="30dp"
+                    android:backgroundTint="@color/dialogButtonColor"
+                    android:text="@string/dialogButtonCancel" />
 
             <com.google.android.material.button.MaterialButton
                     android:id="@+id/dialog_add_confirm"
@@ -62,7 +68,12 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="8dp"
-                    android:text="Ok" />
+                    app:cornerRadius="20dp"
+                    android:padding="12dp"
+                    android:paddingStart="30dp"
+                    android:paddingEnd="30dp"
+                    android:backgroundTint="@color/dialogButtonColor"
+                    android:text="@string/dialogButtonOk" />
         </LinearLayout>
     </LinearLayout>
 </layout>
