--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,9 @@
     <color name="gradientToolbarStartColor">#5a61e7</color>
     <color name="gradientToolbarEndColor">#b785f8</color>
     <color name="toggleButtonColor">#c3c97f</color>
+    <color name="gradientUpdateStartColor">#c9cd89</color>
+    <color name="gradientUpdateEndColor">#b5bc5e</color>
+    <color name="dialogButtonColor">#7966fe</color>
     //Calendar
     <color tools:override="true" name="date_picker_text_normal">#ffffff</color>
     <color tools:override="true" name="bpDarker_blue">#ffffff</color>
